--- a/mongo-rest-persistence/pom.xml
+++ b/mongo-rest-persistence/pom.xml
@@ -92,10 +92,10 @@
 			<version>2.2.4</version>
 		</dependency>
 		<dependency>
-      <groupId>javax.persistence</groupId>
-      <artifactId>persistence-api</artifactId>
-      <version>1.0.2</version>
-  </dependency>
+			<groupId>javax.persistence</groupId>
+			<artifactId>persistence-api</artifactId>
+			<version>1.0.2</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -111,49 +111,21 @@
 		</dependency>
 	</dependencies>
 
-	<!--<dependencyManagement>-->
-		<!--<dependencies>-->
-			<!--<dependency>-->
-				<!--<groupId>org.easymock</groupId>-->
-				<!--<artifactId>easymock</artifactId>-->
-				<!--<version>3.2</version>-->
-				<!--<scope>test</scope>-->
-			<!--</dependency>-->
-		<!--</dependencies>-->
-	<!--</dependencyManagement>-->
-
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-war-plugin</artifactId>
-				<version>2.4</version>
-				<configuration>
-					<webXml>${basedir}/src/main/webapp/WEB-INF/web.xml</webXml>
-					<archiveClasses>true</archiveClasses>
-					<webResources>
-						<resource>
-							<directory>src/main/resources/</directory>
-							<targetPath>WEB-INF/classes</targetPath>
-						</resource>
-					</webResources>
-				</configuration>
-			</plugin>
 
 			<plugin>
-				<groupId>org.codehaus.cargo</groupId>
-				<artifactId>cargo-maven2-plugin</artifactId>
-				<version>1.4.8</version>
-				<configuration>
-					<container>
-						<containerId>jetty9x</containerId>
-						<home>${jetty.home}</home>
-					</container>
-					<configuration>
-						<home>${jetty.home}</home>
-						<type>standalone</type>
-					</configuration>
-				</configuration>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.2</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>test-jar</goal>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 
 			<plugin>
@@ -162,7 +134,7 @@
 				<version>2.17</version>
 				<configuration>
 					<excludes>
-						<exclude>com/segal/**</exclude>
+						<exclude>com/segal/mongorest/core/DocumentValidationTest.java</exclude>
 					</excludes>
 				</configuration>
 			</plugin>
