--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
 	<build>
 		<pluginManagement>
 			<plugins>
+
 				<plugin>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<configuration>
@@ -63,8 +64,30 @@
 						<target>1.7</target>
 					</configuration>
 				</plugin>
+
+				<plugin>
+				  <groupId>org.apache.maven.plugins</groupId>
+				  <artifactId>maven-source-plugin</artifactId>
+					<version>2.2.1</version>
+				  <executions>
+				    <execution>
+				      <id>attach-sources</id>
+				      <goals>
+				        <goal>jar</goal>
+				      </goals>
+				    </execution>
+					  <execution>
+			      <id>attach-test-sources</id>
+			      <goals>
+			        <goal>test-jar</goal>
+			      </goals>
+			    </execution>
+				  </executions>
+				</plugin>
+
 			</plugins>
 		</pluginManagement>
+
 	</build>
 
 </project>
