--- a/mongo-rest-example/pom.xml
+++ b/mongo-rest-example/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>mongo-rest-example</artifactId>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 	<version>0.1.0</version>
 	<name>Mongo REST :: Example</name>
 
@@ -50,6 +50,49 @@
 
 	<build>
 		<plugins>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.4</version>
+				<configuration>
+					<webXml>${basedir}/src/main/webapp/WEB-INF/web.xml</webXml>
+					<archiveClasses>true</archiveClasses>
+					<webResources>
+						<resource>
+							<directory>src/main/resources/</directory>
+							<targetPath>WEB-INF/classes</targetPath>
+						</resource>
+					</webResources>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.codehaus.cargo</groupId>
+				<artifactId>cargo-maven2-plugin</artifactId>
+				<version>1.4.8</version>
+				<configuration>
+					<container>
+						<containerId>jetty9x</containerId>
+						<home>F:\deploy\jetty\jetty-distribution-9.1.5.v20140505</home>
+					</container>
+					<configuration>
+						<home>F:\deploy\jetty\jetty-distribution-9.1.5.v20140505</home>
+						<type>existing</type>
+					</configuration>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.17</version>
+				<configuration>
+					<excludes>
+						<exclude>**/runtime/*</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
 
 		</plugins>
 
