Updating dependency to javax.el-api 3.0.0

--- a/mongo-rest-persistence/pom.xml
+++ b/mongo-rest-persistence/pom.xml
@@ -107,6 +107,16 @@
 			<version>5.1.0.Final</version>
 		</dependency>
 		<dependency>
+			<groupId>javax.el</groupId>
+			<artifactId>javax.el-api</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish</groupId>
+			<artifactId>javax.el</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+		<dependency>
 			<groupId>javax.persistence</groupId>
 			<artifactId>persistence-api</artifactId>
 			<version>1.0.2</version>
